change tale access to Record View